add docker compose

--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -1,3 +1,10 @@
-   DATABASE_URL=postgresql://user:password@localhost:5432/sagratorreglia
-   BETTER_AUTH_SECRET=your-super-secret-key-change-this-in-production
-   BASE_URL=http://localhost:3000
+# Better Auth Configuration
+BETTER_AUTH_SECRET=your-super-secret-key-change-this-in-production
+BETTER_AUTH_URL=http://localhost:3000
+
+# Database Configuration - Updated to match Docker Compose
+DATABASE_URL=postgresql://postgres:postgres_password@localhost:5432/sagra_torreglia
+
+# Optional: Social Providers (uncomment and configure as needed)
+# GITHUB_CLIENT_ID=your_github_client_id
+# GITHUB_CLIENT_SECRET=your_github_client_secret
