--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,10 +17,12 @@
     "better-auth": "^1.3.13",
     "drizzle-arktype": "^0.1.3",
     "drizzle-orm": "^0.44.5",
-    "elysia": "latest"
+    "elysia": "latest",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/pg": "^8.15.5",
     "bun-types": "latest",
     "drizzle-kit": "^0.31.4"
   },
