--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,31 +3,42 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts",
+    "dev": "bun run --env-file=.env.development.local --watch src/index.ts",
+    "build": "tsc --noEmit && bun build --compile --minify-whitespace --minify-syntax --target bun --outfile ./build/server ./src/index.ts",
     "db:generate": "drizzle-kit generate",
-    "db:push": "drizzle-kit push",
+    "db:push": "bun run --env-file=.env.development.local drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "better-auth:generate": "bunx --bun @better-auth/cli generate --output ./src/db/auth-schema.ts"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.4.0",
-    "@elysiajs/openapi": "^1.4.6",
+    "@elysiajs/openapi": "^1.4.10",
+    "@elysiajs/opentelemetry": "^1.4.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.205.0",
+    "@opentelemetry/sdk-trace-node": "^2.1.0",
     "arktype": "^2.1.22",
-    "better-auth": "^1.3.13",
+    "better-auth": "^1.3.14",
     "drizzle-arktype": "^0.1.3",
     "drizzle-orm": "^0.44.5",
     "elysia": "latest",
+    "logixlysia": "^5.1.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@rasla/logify": "^5.1.1",
     "@types/bun": "latest",
     "@types/pg": "^8.15.5",
     "bun-types": "latest",
     "drizzle-kit": "^0.31.4"
   },
-  "module": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "module": "src/index.ts",
   "overrides": {
-    "@sinclair/typebox": "0.34.0"
+    "@sinclair/typebox": "0.34.0",
+    "logixlysia": {
+      "elysia": "$elysia"
+    }
   }
 }
