--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,23 +9,31 @@
     "build": "bun run build.ts"
   },
   "dependencies": {
+    "@daveyplate/better-auth-ui": "^3.2.5",
+    "@elysiajs/eden": "^1.4.1",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-form": "^1.23.0",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-router": "^1.132.0",
+    "@tanstack/react-router-devtools": "^1.132.0",
+    "@tanstack/zod-form-adapter": "^0.42.1",
+    "backend": "workspace:*",
     "bun-plugin-tailwind": "^0.0.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
-    "react": "^19",
-    "react-dom": "^19",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.13",
     "tailwindcss-animate": "^1.0.7",
-    "backend": "workspace:*"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
     "@types/bun": "latest"
   }
 }
